--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env*.local
 
 # vercel
 .vercel
@@ -40,4 +41,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/src/generated/prisma
+# prisma
+/prisma/client
+prisma/dev.db
+prisma/dev.db-journal
+
+# gemini
+.gemini/
