--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemailer": "^8.0.1",
     "prisma": "^5.22.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
