--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "@types/nodemailer": "^7.0.9",
+    "@types/nodemailer": "^7.0.10",
     "@vercel/blob": "^2.2.0",
     "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "next": "16.1.6",
     "nodemailer": "^8.0.1",
     "prisma": "^5.22.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "resend": "^6.9.2"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
